# jamespy

./: Cargo.toml  README.md
config/lists/: loblist.txt
migrations/: 20250202003817_starboard-additions.sql  20250213153904_drop-names.sql  20250214213732_response-regexes.sql  20250501172502_starboard_overrides.sql
moth_ansi/: Cargo.toml
moth_ansi/src/: lib.rs
moth_commands/: Cargo.toml
moth_commands/src/: lib.rs  meta.rs  register.rs  starboard.rs
moth_commands/src/lob/: text.rs
moth_commands/src/moderation/: mod.rs
moth_commands/src/owner/: cache.rs  checks.rs  cooldowns.rs  database.rs  mod.rs  other.rs  phil.rs  presence.rs
moth_commands/src/utility/: charinfo.rs  guild.rs  random.rs  users.rs
moth_commands/src/utility/expressions/: last_reactions.rs  last_reactions_paginator.rs  mod.rs  query.rs  utils.rs
moth_commands/src/utils/: checks.rs  mod.rs  pagination.rs
moth_config/: Cargo.toml
moth_core/: Cargo.toml
moth_core/src/: emojis.rs  lib.rs  ocr.rs
moth_core/src/config/: mod.rs
moth_core/src/data/: database.rs  lob.rs  mod.rs  responses.rs  structs.rs
moth_data/src/: database.rs  lob.rs  structs.rs
moth_events/: Cargo.toml
moth_events/src/: helper.rs  lib.rs
moth_events/src/handlers/: channels.rs  misc.rs  users.rs  voice.rs
moth_events/src/handlers/guilds/: member_roles.rs  mod.rs  roles.rs
moth_events/src/handlers/messages/: anti_delete.rs  database.rs  invites.rs  mod.rs  responses.rs
moth_events/src/handlers/reactions/: database.rs  mod.rs
moth_starboard/: Cargo.toml
moth_starboard/src/: components.rs  lib.rs  reactions.rs  starboard.rs
src/: data.rs  error.rs  main.rs
