[package]
name = "moth"
version = "0.3.0"
edition = "2021"

[dependencies]
moth_core = { path = "moth_core" }
moth_events = { path = "moth_events" }
moth_commands = { path = "moth_commands" }

sqlx = { workspace = true }
tokio = { workspace = true }
lumi = { workspace = true }
serenity = { workspace = true }
reqwest = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

tracing-subscriber = "0.3.18"
dotenvy = "0.15.7"
bitflags = "2.8.0"


[workspace]
members = [ "moth_core", "moth_events", "moth_commands", "moth_filter", "moth_ansi", "moth_starboard"]

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "signal", "parking_lot"] }
sqlx = { version = "0.8", features = ["macros", "postgres", "runtime-tokio-rustls", "chrono"] }
reqwest = "0.12"
rand = "0.9"
small-fixed-array = { version = "0.4.5", features = ["nightly"] }
chrono = "0.4"
parking_lot = "0.12.1"
dashmap = "6"
unicode_names2 = "1.2.2"
image = "0.25.2"
unicode-segmentation = "1.12.0"
emojis = "0.6.4"
tracing = "0.1.40"
rustrict = "0.7.33"
regex = "1.11.1"
serde = "1"
serde_json = "1"
leptess = "0.14.0"

[workspace.dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
#path = "../serenity"
features = ["temp_cache"]
default-features = false
branch = "next"


[workspace.dependencies.lumi]
git = "https://github.com/moth-rs/lumi"
branch = "main"

# patch for developing locally.
#[patch."https://github.com/serenity-rs/serenity".serenity]
#path = "../serenity"

#[patch.'https://github.com/serenity-rs/serenity']
#serenity = { git = 'https://github.com/jamesbt365/serenity', branch = 'next-downgrade-tokio-tungstenite' }


[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
