[package]
name = "moth_core"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
poise = { workspace = true }
serenity = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true}
tracing = { workspace = true }
rustrict.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
base64 = "0.22"
